package be.intec.CalibrateYourHealth.repositories;

import be.intec.CalibrateYourHealth.model.Patient;
import org.springframework.stereotype.Repository;
import org.springframework.data.jpa.repository.JpaRepository;


import java.util.List;
import java.util.Optional;

@Repository
public interface PatientRepository extends JpaRepository<Patient, Long> {
    Optional<Patient> findPatientById(Long id); //for doctor and admin

    List<Patient> findAll(); //for admin and doctor

    List<Patient> findPatientsByDoctorId(Long doctorId); // for patient and doctor

    Patient save(Patient patient); // for patient

    void deletePatientFromDoctorById(Long id);// for admin and doctor

    Patient updatePatientPassword(Patient patient); //for admin:if patient forgets password, reset password.


}
